<resources>
    <string name="app_name">Chatting</string>
    <string name="password">패스워드</string>
    <string name="id">아이디</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="people">People</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="send">전송</string>
</resources>