<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_chat_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:id="@+id/main_iv"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/main_iv"
        android:layout_marginTop="40dp"
        android:id="@+id/id_et"
        android:hint="@string/id"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/id_et"
        android:layout_marginTop="20dp"
        android:id="@+id/pw_et"
        android:hint="@string/password"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@id/id_et"
        app:layout_constraintEnd_toEndOf="@id/id_et"
        app:layout_constraintTop_toBottomOf="@id/pw_et"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signup_btn"
        app:layout_constraintStart_toStartOf="@id/id_et"
        app:layout_constraintEnd_toEndOf="@id/id_et"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:layout_marginTop="10dp"
        android:text="@string/signup"/>

</androidx.constraintlayout.widget.ConstraintLayout>